<resources>
    <string name="app_name">AlboChallenge</string>

    <!-- Home -->
    <string name="home_text_title">Albo Challenge</string>
    <string name="home_btntitle_transactions">Transactions</string>
    <string name="home_btntitle_api">Punk API</string>
    <string name="text_pending_transactions">Transacciones pendientes</string>
    <string name="text_rejected_transactions">Transacciones bloqueadas</string>
    <string name="text_incomes">Ingresos</string>
    <string name="text_expenses">Gastos</string>
    <string name="total_format">$%d</string>
    <string name="text_options_title">Opciones</string>
    <string name="text_title_transactions">Transacciones</string>
</resources>