<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewmodel"
            type="com.tonatiuhcastro.albochallenge.home.presentation.viewmodel.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".home.presentation.view.HomeFragment">

        <TextView
            android:id="@+id/home_activity_tvtitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/home_text_title"
            app:layout_constraintBottom_toBottomOf="@id/home_activity_btntransactions"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/home_activity_btntransactions"
            style="@style/ButtonCompleteOrangeStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/home_btntitle_transactions"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:onClick="@{() -> viewmodel.onTransactionClicked()}"/>

        <Button
            android:id="@+id/home_activity_btnpunkapi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/activity_horizontal_margin"
            android:text="@string/home_btntitle_api"
            android:theme="@style/ButtonCompleteOrangeStyle"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/home_activity_btntransactions"
            android:onClick="@{() -> viewmodel.onPunkAPIClicked()}"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>